add header changes

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css">
 
     <title>Ibrahima SALL</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1867724063377292"
+     crossorigin="anonymous"></script>
   </head>
 
   <body>
